[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/RecipeDesigner.gd" id="1_recipe"]

[node name="RecipeDesigner" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_recipe")

[node name="DimOverlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.059, 0.09, 0.141, 0.6)

[node name="CardPanel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -550.0
offset_top = -325.0
offset_right = 550.0
offset_bottom = 325.0

[node name="MarginContainer" type="MarginContainer" parent="CardPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBox" type="VBoxContainer" parent="CardPanel/MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="CardPanel/MarginContainer/VBox"]
text = "DESIGN YOUR RECIPE"
theme_override_font_sizes/font_size = 32

[node name="HSeparator" type="HSeparator" parent="CardPanel/MarginContainer/VBox"]

[node name="HBox" type="HBoxContainer" parent="CardPanel/MarginContainer/VBox"]
size_flags_vertical = 3
theme_override_constants/separation = 24

[node name="MaltPanel" type="VBoxContainer" parent="CardPanel/MarginContainer/VBox/HBox"]
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="MaltTitle" type="Label" parent="CardPanel/MarginContainer/VBox/HBox/MaltPanel"]
text = "MALTS (0/3)"
theme_override_font_sizes/font_size = 24

[node name="VBox" type="VBoxContainer" parent="CardPanel/MarginContainer/VBox/HBox/MaltPanel"]
theme_override_constants/separation = 8

[node name="HopPanel" type="VBoxContainer" parent="CardPanel/MarginContainer/VBox/HBox"]
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="HopTitle" type="Label" parent="CardPanel/MarginContainer/VBox/HBox/HopPanel"]
text = "HOPS (0/2)"
theme_override_font_sizes/font_size = 24

[node name="VBox" type="VBoxContainer" parent="CardPanel/MarginContainer/VBox/HBox/HopPanel"]
theme_override_constants/separation = 8

[node name="YeastPanel" type="VBoxContainer" parent="CardPanel/MarginContainer/VBox/HBox"]
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="YeastTitle" type="Label" parent="CardPanel/MarginContainer/VBox/HBox/YeastPanel"]
text = "YEAST"
theme_override_font_sizes/font_size = 24

[node name="VBox" type="VBoxContainer" parent="CardPanel/MarginContainer/VBox/HBox/YeastPanel"]
theme_override_constants/separation = 8

[node name="AdjunctPanel" type="VBoxContainer" parent="CardPanel/MarginContainer/VBox/HBox"]
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="AdjunctTitle" type="Label" parent="CardPanel/MarginContainer/VBox/HBox/AdjunctPanel"]
text = "ADJUNCTS (0/2)"
theme_override_font_sizes/font_size = 24

[node name="VBox" type="VBoxContainer" parent="CardPanel/MarginContainer/VBox/HBox/AdjunctPanel"]
theme_override_constants/separation = 8

[node name="SummaryPanel" type="PanelContainer" parent="CardPanel/MarginContainer/VBox"]

[node name="SummaryVBox" type="VBoxContainer" parent="CardPanel/MarginContainer/VBox/SummaryPanel"]
theme_override_constants/separation = 8

[node name="FlavorBars" type="HBoxContainer" parent="CardPanel/MarginContainer/VBox/SummaryPanel/SummaryVBox"]
theme_override_constants/separation = 12

[node name="Bitterness" type="ProgressBar" parent="CardPanel/MarginContainer/VBox/SummaryPanel/SummaryVBox/FlavorBars"]
custom_minimum_size = Vector2(80, 20)
size_flags_horizontal = 3
max_value = 100.0
value = 0.0
show_percentage = false

[node name="Sweetness" type="ProgressBar" parent="CardPanel/MarginContainer/VBox/SummaryPanel/SummaryVBox/FlavorBars"]
custom_minimum_size = Vector2(80, 20)
size_flags_horizontal = 3
max_value = 100.0
value = 0.0
show_percentage = false

[node name="Roastiness" type="ProgressBar" parent="CardPanel/MarginContainer/VBox/SummaryPanel/SummaryVBox/FlavorBars"]
custom_minimum_size = Vector2(80, 20)
size_flags_horizontal = 3
max_value = 100.0
value = 0.0
show_percentage = false

[node name="Fruitiness" type="ProgressBar" parent="CardPanel/MarginContainer/VBox/SummaryPanel/SummaryVBox/FlavorBars"]
custom_minimum_size = Vector2(80, 20)
size_flags_horizontal = 3
max_value = 100.0
value = 0.0
show_percentage = false

[node name="Funkiness" type="ProgressBar" parent="CardPanel/MarginContainer/VBox/SummaryPanel/SummaryVBox/FlavorBars"]
custom_minimum_size = Vector2(80, 20)
size_flags_horizontal = 3
max_value = 100.0
value = 0.0
show_percentage = false

[node name="CostLabel" type="Label" parent="CardPanel/MarginContainer/VBox/SummaryPanel/SummaryVBox"]
text = "Total: $0"
horizontal_alignment = 1

[node name="WarningLabel" type="Label" parent="CardPanel/MarginContainer/VBox/SummaryPanel/SummaryVBox"]
visible = false
text = "Recipe requires at least one base malt"
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.9, 0.3, 0.2, 1)

[node name="FooterRow" type="HBoxContainer" parent="CardPanel/MarginContainer/VBox"]
alignment = 2

[node name="BrewButton" type="Button" parent="CardPanel/MarginContainer/VBox/FooterRow"]
text = "Start Brewing â†’"
disabled = true
theme_override_font_sizes/font_size = 24
custom_minimum_size = Vector2(200, 44)
